package br.com.ninja.kafka.domain;

public class Road {
}
