package br.com.ninja.poc.factory_method;

public enum Channel {
    SEA,
    AIR,
    ROAD
}
